src/objects/MME__EmailMessage__c.object
<CustomObject>
    <description>Email message in Match My Email</description>
    <fields>
        <fullName>MME__AttachmentsPlain__c</fullName>
        <label>Attachments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MME__Attachments__c</fullName>
        <label>Attachments</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MME__Bcc__c</fullName>
        <label>Bcc</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MME__Body__c</fullName>
        <description>Email Message Body</description>
        <label>Body</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MME__Cc__c</fullName>
        <label>Cc</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MME__ContentDigest__c</fullName>
        <label>Content Digest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MME__DateTimestamp__c</fullName>
        <externalId>true</externalId>
        <label>Date Timestamp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MME__Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MME__ForwardedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Forwarded By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ForwardedToEmailMessages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MME__FromShort__c</fullName>
        <label>From</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MME__From__c</fullName>
        <label>From</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MME__InReplyTo__c</fullName>
        <description>The value of In-Reply-To email header</description>
        <label>In-Reply-To</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MME__IsForwarded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Forwarded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MME__IsReplied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Replied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MME__MessageID__c</fullName>
        <label>Message ID</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MME__MmeID__c</fullName>
        <externalId>true</externalId>
        <label>MME ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MME__OrgDirection__c</fullName>
        <defaultValue>null</defaultValue>
        <label>Org Direction</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MME__References__c</fullName>
        <description>The value of References email headers</description>
        <label>References</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MME__RelatedObjectsCount__c</fullName>
        <label>Related Objects Count</label>
        <summaryForeignKey>MME__EmailMessageRelatedObject__c.MME__EmailMessage__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MME__RepliedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Replied By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RepliedToEmailMessages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MME__SubjectLink__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+Id, BLANKVALUE(MME__SubjectShort__c, &apos;No Subject&apos;), &apos;_top&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MME__SubjectShort__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MME__Subject__c</fullName>
        <label>Subject</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MME__ToShort__c</fullName>
        <label>To</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MME__To__c</fullName>
        <label>To</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Email Message</label>
    <listViews>
        <fullName>MME__AllEmailMessages</fullName>
        <columns>MME__FromShort__c</columns>
        <columns>MME__SubjectLink__c</columns>
        <columns>MME__Date__c</columns>
        <columns>MME__AttachmentsPlain__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>MME__AllNoMatchEmailMessages</fullName>
        <columns>MME__FromShort__c</columns>
        <columns>MME__SubjectLink__c</columns>
        <columns>MME__Date__c</columns>
        <columns>MME__Attachments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MME__RelatedObjectsCount__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All No Match</label>
    </listViews>
    <listViews>
        <fullName>MME__MyNoMatchEmailMessages</fullName>
        <columns>MME__FromShort__c</columns>
        <columns>MME__SubjectLink__c</columns>
        <columns>MME__Date__c</columns>
        <columns>MME__Attachments__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>MME__RelatedObjectsCount__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My No Match</label>
    </listViews>
    <listViews>
        <fullName>MME__My_Email_Messages</fullName>
        <columns>MME__FromShort__c</columns>
        <columns>MME__SubjectLink__c</columns>
        <columns>MME__Date__c</columns>
        <columns>MME__AttachmentsPlain__c</columns>
        <filterScope>Mine</filterScope>
        <label>My</label>
    </listViews>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Messages</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>